--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Kimchi Fried Rice</h1>
-        <img src="images/kimchi-fried-rice.jpg" alt="bowl of kimchi fried rice and side of kimchi">
+        <img src="../images/kimchi-fried-rice.jpg" alt="bowl of kimchi fried rice and side of kimchi">
     </body>
 
 </html>
