description and lists added kfr

--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -9,6 +9,35 @@
     <body>
         <h1>Kimchi Fried Rice</h1>
         <img src="../images/kimchi-fried-rice.jpg" alt="bowl of kimchi fried rice and side of kimchi">
+
+        <p><h3>Description</h3></p>
+
+        <p>Kimchi fried rice or 'kimchi bokkeumbap (김치볶음밥)' in Korean is a simple and beloved dish in Korea, often with the addition of some type of meat (my partner likes spam) or a fried egg, but just as easily made vegetarian or vegan.</p>
+
+        <p>With a few simple ingredients and a bit of time, you'll be well on your way to creating a delicious and traditional Korean dish. This dish is easily tweaked to suit your tastes - for example, I like to add a bit of gochujang for extra spice.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>vegetable oil</li>
+            <li>3 cups cooked rice (preferably a day old)</li>
+            <li>1 cup chopped kimchi (preferably Gomo Kimchi)</li>
+            <li>1/4 cup kimchi juice</li>
+            <li>1/4 cup water</li>
+            <li>2-3 tablespoons gochujang</li>
+            <li>sesame oil/sesame seeds/seaweed/spam/fried egg/whatever the heck else you want to put on/in it</li>
+           
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Heat the vegetable oil (NOT sesame oil), make sure it's nice n sizzly hot before you do anything</li>
+            <li>Fry up the kimchi for a couple mins</li>
+            <li>Add the cookied rice, kimchi juice, water and gochujang. Cook for 5-10 minutes, stirring as much as your lil arms can handle</li>
+            <li>Mix in some sesame oil if you like and take off the heat</li>
+            <li>Serve right away nice and piping hot with whatever other junk you like, listed above or otherwise</li>
+        </ol>
+
+
     </body>
 
 </html>
