tweak desript/lists kfr

--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -12,7 +12,7 @@
 
         <p><h3>Description</h3></p>
 
-        <p>Kimchi fried rice or 'kimchi bokkeumbap (김치볶음밥)' in Korean is a simple and beloved dish in Korea, often with the addition of some type of meat (my partner likes spam) or a fried egg, but just as easily made vegetarian or vegan.</p>
+        <p>Kimchi fried rice or 'kimchi bokkeumbap (김치볶음밥)' is a simple and beloved dish in Korea, often with the addition of some type of meat (my partner likes spam) or a fried egg, but just as easily made vegetarian or vegan.</p>
 
         <p>With a few simple ingredients and a bit of time, you'll be well on your way to creating a delicious and traditional Korean dish. This dish is easily tweaked to suit your tastes - for example, I like to add a bit of gochujang for extra spice.</p>
 
@@ -23,8 +23,7 @@
             <li>1 cup chopped kimchi (preferably Gomo Kimchi)</li>
             <li>1/4 cup kimchi juice</li>
             <li>1/4 cup water</li>
-            <li>2-3 tablespoons gochujang</li>
-            <li>sesame oil/sesame seeds/seaweed/spam/fried egg/whatever the heck else you want to put on/in it</li>
+            <li>sesame oil/sesame seeds/seaweed/spam/fried egg/gochujang/whatever the heck else you want to put on/in it</li>
            
         </ul>
 
