--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <p><a href="./recipes/kimchi-fried-rice.html">Kimchi Fried Rice</a></p>
+        <p>
+            <ul>
+                <li><a href="./recipes/kimchi-fried-rice.html">Kimchi Fried Rice</a></li>
+                <li><a href=".recipes/vegan-poke-bowls.html">Vegan Poke Bowls</a></li>
+            </ul>
+            </p>
     </body>
 </html>
