small tweaks to steps text kfr

--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -31,7 +31,7 @@
         <ol>
             <li>Heat the vegetable oil (NOT sesame oil), make sure it's nice n sizzly hot before you do anything</li>
             <li>Fry up the kimchi for a couple mins</li>
-            <li>Add the cookied rice, kimchi juice, water and gochujang. Cook for 5-10 minutes, stirring as much as your lil arms can handle</li>
+            <li>Add the cookied rice, kimchi juice, water and gochujang (if using). Cook for 5-10 minutes, stirring as much as your lil arms can handle</li>
             <li>Mix in some sesame oil if you like and take off the heat</li>
             <li>Serve right away nice and piping hot with whatever other junk you like, listed above or otherwise</li>
         </ol>
