add ingreds & steps vpb

--- a/recipes/vegan-poke-bowls.html
+++ b/recipes/vegan-poke-bowls.html
@@ -14,6 +14,40 @@
         <p>My partner likes to say 'these taste way better than they have any right to' and I have to agree. Easiest dinner we make by far, healthy and tasty AF.</p>
 
         <p>Enjoy</p>
-        
+
+        <h3>Ingredients</h3>
+
+        <p> Makes enough for 2 depending on how big you like your portions (we like them big)
+            <ul>
+                <li>1.5 cups uncooked rice</li>
+                <li>veggie stock cube</li>
+                <li>butter (vegan/optional)</li>
+                <li>1 mango</li>
+                <li>1/2 a cucumber</li>
+                <li>handful cherry tomatoes</li>
+                <li>1 avocado</li>
+                <li>1 block extra firm tofu</li>
+                <li>1 pack dried seaweed</li>
+                <li>siracha to taste</li>
+                <li>sesame oil to taste</li>
+                <li>soy sauce to taste</li>
+                <li>(if you <em>don't</em> want your poke bowls to be vegan you can add fried spam like my partner does)</li>
+
+            </ul>
+
+        </p>
+
+        <h3>Steps</h3>
+
+        <p>
+            <ol>
+                <li>Cook rice - 1 part rice to 2 parts water with the stock cube and butter (if using) until all water is absorbed</li>
+                <li>Cut tofu into small cubes and fry with whatever seasoning you like - I tend to use garlic powder, ginger powder, white pepper and chinese 5 spice with some soy sauce and mirin or rice vinegar</li>
+                <li>Chop all the fruit and veggies up nice and small</li>
+                <li>Place rice in a bowl and arrange fruit and veggies in a nice pretty circle on top as pictured above</li>
+                <li>Top with siracha, sesame oil and soy sauce to taste (we use LOTS)</li>
+                <li>Service with dried seaweed and enjoy!!</li>
+            </ol>
+        </p>
     </body>
 </html>
