jjm add ingreds & steps

--- a/recipes/vegan-jjajangmyeon.html
+++ b/recipes/vegan-jjajangmyeon.html
@@ -8,6 +8,54 @@
     <body>
         <h1>Vegan Jjajangmyeon</h1>
         <img src="../images/jjajangmyeon.jpg" alt="bowl of jjajangmyeon, noodles being held by chopsticks w/kimchi">
+
+        <p><h2>Description</h2></p>
+        <p>As a vegan, I have never been able to try the original version of jjajangmyeon (짜장면) which usually has pork, but my meat-eating partner seems to quite enjoy this version too.</p>
+
+        <p>Praise unto <a href="https://thekoreanvegan.com/">The Korean Vegan (TKV)</a> for veganizing all these wonderful Korean recipes - and for my partner's mum sending us back from Seattle with massive jars of jjajang (Korean black bean paste).</p>
+
+        <p>I'll be honest and say that I've thrown in some of my own personal tweaks that make this recipe slightly easier but probably not as good and less authentic. If you want the real deal, TKV cookbook is where it's at.</p>
+
+        <h3>Ingredients</h3>
+
+        <p>
+            <ul>
+                <li>4 dried shitake mushrooms, soaked</li>
+                <li>1 cup fresh mushrooms of choice</li>
+                <li>1 cup chopped onion</li>
+                <li>3-4 cloves garlic to taste</li>
+                <li>1 potato</li>
+                <li>1/2 a courgette</li>
+                <li>1 cup chopped cabbage</li>
+                <li>1/4 cup jjajang - more to taste</li>
+                <li> 1 tbsp soy sauce - more to taste</li>
+                <li>1/2 cup mushroom dashi (if you don't have this/have time to make this, I will often use the water I've used to soak the shitakes and soak an inch or two of kombu in there too)</li>
+                <li>2 tbsp syrup of choice (I usually go maple)</li>
+                <li>2 tbsp potato starch mixed with 1/4 cup water</li>
+                <li>4 servings noodles - whatever kind you like (we normally go with udon or ramen, or make our own as per TKV's recipe if we're feeling full of energy)</li>
+                <li>1 cup julienned cucumber (disclaimer: I do not know how to julienne)</li>
+
+            </ul>
+
+        </p>
+
+        <h3>Steps</h3>
+
+        <p>
+            <ol>
+                <li>Soak the shitakes (with kombu, if doing the makeshift dashi nonsense as above) in water for around 1 hr to reconstitute</li>
+                <li>Heat oil in a wok or very large pan and add chopped shitakes (and kombu), reserve water</li>   
+                <li>Add the rest of the chopped up veggies (including garlic & onions) to the pan and cook for around 5 minutes, stirring or shoogling frequently</li> 
+                <li>Remove everything from the pan and set aside</li>
+                <li>Add some more oil to the same pan and, once hot, add jjajang. Stir jjajang and oil constantly so it doesn't burn until it gets very shiny (1-2 mins)</li>
+                <li>Add cooked veggies back to the pan and stir until everything is coated with jjajang</li>
+                <li>Add soy sauce, dashi (/mushroom-kombu water) and syrup and bring to a boil</li>
+                <li>Cover pan and simmer until potatoes are nearly cooked (about 5 mins)</li>
+                <li>Add potato starch and water mix and cook until sauce is think and shiny, about 1 more minute</li>
+                <li>Serve with noodles and garnish with cucumber and enjoy!</li>
+
+            </ol>
+        </p>
     </body>
 
 
