small text edits all recipes

--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -17,7 +17,8 @@
         <p>With a few simple ingredients and a bit of time, you'll be well on your way to creating a delicious and traditional Korean dish. This dish is easily tweaked to suit your tastes - for example, I like to add a bit of gochujang for extra spice.</p>
 
         <h2>Ingredients</h2>
-        <ul>
+        <p>Makes around 4 generous servings
+            <ul>
             <li>vegetable oil</li>
             <li>3 cups cooked rice (preferably a day old)</li>
             <li>1 cup chopped kimchi (preferably Gomo Kimchi)</li>
@@ -26,7 +27,7 @@
             <li>sesame oil/sesame seeds/seaweed/spam/fried egg/gochujang/whatever the heck else you want to put on/in it</li>
            
         </ul>
-
+    </p>
         <h2>Steps</h2>
         <ol>
             <li>Heat the vegetable oil (NOT sesame oil), make sure it's nice n sizzly hot before you do anything</li>
