--- a/recipes/vegan-jjajangmyeon.html
+++ b/recipes/vegan-jjajangmyeon.html
@@ -18,7 +18,7 @@
 
         <h3>Ingredients</h3>
 
-        <p>
+        <p>Serves 4 
             <ul>
                 <li>4 dried shitake mushrooms, soaked</li>
                 <li>1 cup fresh mushrooms of choice</li>
