--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+        
         <title>Odin Recipes</title>
     </head>
 
