add css styles index, kfr, vpb & jjm

--- a/recipes/kimchi-fried-rice.html
+++ b/recipes/kimchi-fried-rice.html
@@ -8,16 +8,16 @@
     </head>
 
     <body>
-        <h1>Kimchi Fried Rice</h1>
-        <img src="../images/kimchi-fried-rice.jpg" alt="bowl of kimchi fried rice and side of kimchi">
+        <div class="main-text"><h1>Kimchi Fried Rice</h1>
+        <div class="recipediv"><img src="../images/kimchi-fried-rice.jpg" alt="bowl of kimchi fried rice and side of kimchi" class="recipeimg"></div>
 
-        <p><h3>Description</h3></p>
+        <p><h2 class="main-text header">Description</h3></p>
 
         <p>Kimchi fried rice or 'kimchi bokkeumbap (김치볶음밥)' is a simple and beloved dish in Korea, often with the addition of some type of meat (my partner likes spam) or a fried egg, but just as easily made vegetarian or vegan.</p>
 
         <p>With a few simple ingredients and a bit of time, you'll be well on your way to creating a delicious and traditional Korean dish. This dish is easily tweaked to suit your tastes - for example, I like to add a bit of gochujang for extra spice.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="main-text header">Ingredients</h2>
         <p>Makes around 4 generous servings
             <ul>
             <li>vegetable oil</li>
@@ -29,7 +29,7 @@
            
         </ul>
     </p>
-        <h2>Steps</h2>
+       <h2 class="main-text header">Steps</h2>
         <ol>
             <li>Heat the vegetable oil (NOT sesame oil), make sure it's nice n sizzly hot before you do anything</li>
             <li>Fry up the kimchi for a couple mins</li>
@@ -37,7 +37,7 @@
             <li>Mix in some sesame oil if you like and take off the heat</li>
             <li>Serve right away nice and piping hot with whatever other junk you like, listed above or otherwise</li>
         </ol>
-
+</div>
 
     </body>
 
