--- a/recipes/vegan-jjajangmyeon.html
+++ b/recipes/vegan-jjajangmyeon.html
@@ -7,17 +7,17 @@
     </head>
     
     <body>
-        <h1>Vegan Jjajangmyeon</h1>
-        <img src="../images/jjajangmyeon.jpg" alt="bowl of jjajangmyeon, noodles being held by chopsticks w/kimchi">
+        <div class="main-text"><h1>Vegan Jjajangmyeon</h1>
+        <div class="recipediv"><img src="../images/jjajangmyeon.jpg" alt="bowl of jjajangmyeon, noodles being held by chopsticks w/kimchi" class="recipeimg"></div>
 
-        <p><h2>Description</h2></p>
+        <p><h2 class="main-text header">Description</h2></p>
         <p>As a vegan, I have never been able to try the original version of jjajangmyeon (짜장면) which usually has pork, but my meat-eating partner seems to quite enjoy this version too.</p>
 
         <p>Praise unto <a href="https://thekoreanvegan.com/">The Korean Vegan (TKV)</a> for veganizing all these wonderful Korean recipes - and for my partner's mum sending us back from Seattle with massive jars of jjajang (Korean black bean paste).</p>
 
         <p>I'll be honest and say that I've thrown in some of my own personal tweaks that make this recipe slightly easier but probably not as good and less authentic. If you want the real deal, TKV cookbook is where it's at.</p>
 
-        <h3>Ingredients</h3>
+        <h3 class="main-text header">Ingredients</h3>
 
         <p>Serves 4 
             <ul>
@@ -40,7 +40,7 @@
 
         </p>
 
-        <h3>Steps</h3>
+        <h3 class="main-text header">Step</h3>
 
         <p>
             <ol>
@@ -57,6 +57,7 @@
 
             </ol>
         </p>
+        </div>
     </body>
 
 
