--- a/recipes/vegan-poke-bowls.html
+++ b/recipes/vegan-poke-bowls.html
@@ -7,14 +7,14 @@
     </head>
 
     <body>
-        <h1>Vegan Poke Bowls</h1>
-        <img src="../images/vegan-poke-bowl.jpg" alt="poke bowl w/packet of dried seaweed and bottle of siracha">
-        <p><h3>Description</h3></p>
+        <div class="main-text"><h1>Vegan Poke Bowls</h1>
+        <div class="recipediv"><img src="../images/vegan-poke-bowl.jpg" alt="poke bowl w/packet of dried seaweed and bottle of siracha" class="recipeimg"></div>
+        <p><h3 class="main-text header">Description</h3></p>
         <p>I literally cannot fathom why these poke bowls are so good. To be perfectly honest, I don't know how 'authentic' these are or if they taste anything like traditional poke bowls, but they taste amazing.</p>
 
         <p>My partner likes to say 'these taste way better than they have any right to' and I have to agree. Easiest dinner we make by far, healthy and tasty AF.</p>
 
-        <h3>Ingredients</h3>
+        <h3 class="main-text header">Ingredients</h3>
 
         <p> Makes enough for 2 depending on how big you like your portions (we like them big)
             <ul>
@@ -36,7 +36,7 @@
 
         </p>
 
-        <h3>Steps</h3>
+        <h3 class="main-text header">Steps</h3>
 
         <p>
             <ol>
@@ -48,5 +48,6 @@
                 <li>Service with dried seaweed and enjoy!!</li>
             </ol>
         </p>
+        </div>
     </body>
 </html>
